--- a/src/index.html
+++ b/src/index.html
@@ -14,16 +14,16 @@
   </head>
   <body>
     <div class="container-fluid text-center">
-      <h1 class="mt-5">Hello Rigo!</h1>
+      <h1 class="mt-5">You're not going to believe me, but...</h1>
+      <h4 id="excuse">hello this is myb content</h4>
       <img src="./rigo-baby.jpg" />
-      <p class="alert alert-warning mt-4">
-        If this text is <b>not</b> centered and <b>yellow</b>, you probably have
-        an error
-      </p>
+
       <div class="fixed-bottom p-4">
         Made with ❤️ by
         <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
       </div>
     </div>
+
+    <script src="app.js"></script>
   </body>
 </html>
