--- a/src/index.html
+++ b/src/index.html
@@ -13,17 +13,6 @@
     <link rel="shortcut icon" href="./4geeks.ico" />
   </head>
   <body>
-    <div class="container-fluid text-center">
-      <h1 class="mt-5">You're not going to believe me, but...</h1>
-      <h4 id="excuse">hello this is myb content</h4>
-      <img src="./rigo-baby.jpg" />
-
-      <div class="fixed-bottom p-4">
-        Made with ❤️ by
-        <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
-      </div>
-    </div>
-
-    <script src="app.js"></script>
+    <div id="excuse" class="container-fluid text-center"></div>
   </body>
 </html>
